# butler_events_calendar

./: .gitignore  README.md  environment.yml  get_token.py  pyproject.toml  update_calendar.py
.github/workflows/: delete_all_events.yaml  run_weekly.yaml  test.yaml
src/butler_cal/: __init__.py  __main__.py  gcal.py  retry.py  scrape_butler_music.py  scraper.py  utils.py
src/butler_cal/scraper/: __init__.py  scrape_butler_music.py  scrape_pflugerville_library.py
tests/: page_example.html  test_gcal.py  test_pflugerville_library.py  test_scraper.py  test_update_calendar.py  test_utils.py
