[project]
name = "butler-cal"
version = "0.1.0"
description = "Scrape UT Calendar and update Google Calendar"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "requests",
  "beautifulsoup4",
  "pytz",
  "google-api-python-client",
  "google-auth",
  "google-auth-oauthlib",
  "google-auth-httplib2"
]

[project.scripts]
update-calendar = "butler_cal.update_calendar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/butler_cal"]
